test-deployment-atlas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: atlas-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tenant: atlas
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
